# OpenRD-web-server

./: .env  .env.sample  .gitignore  Cargo.toml  Makefile.toml  README.md  dockerfile  info
.github/workflow/: deploy.yaml
docs/: all.html  crates.js  index.html  macro.log_debug.html  macro.log_error.html  macro.log_info.html  macro.log_warn.html  sidebar-items.js
docs/handlers/: index.html  macro.log_debug.html  macro.log_error.html  macro.log_info.html  macro.log_warn.html  sidebar-items.js
docs/handlers/auth/: fn.extract_permissions_from_token.html  fn.generate_token.html  fn.validate_token.html  index.html  sidebar-items.js  struct.Claims.html
docs/handlers/config/: index.html  sidebar-items.js  struct.Config.html  struct.DatabaseConfig.html  struct.LogConfig.html  struct.ServerConfig.html
docs/handlers/db/: constant.MIGRATIONS.html  index.html  sidebar-items.js  struct.DatabaseManager.html  type.DbConnection.html  type.DbPool.html
docs/handlers/error/: enum.AppError.html  index.html  sidebar-items.js
docs/handlers/logger/: fn.init_logger.html  index.html  sidebar-items.js  struct.RequestLogger.html  (+1 more)
docs/marcos/: index.html
docs/models/: index.html  sidebar-items.js
docs/routes/: index.html  sidebar-items.js
docs/schema/: index.html  sidebar-items.js
docs/utils/: index.html  sidebar-items.js
migrations/2024-12-11-062153_create_users/: up.sql
migrations/2024-12-12-172314_create_chat/: down.sql  up.sql
migrations/2024-12-12-175511_add_password_to_users/: down.sql  up.sql
migrations/2024-12-16-141933_add_password_to_users/: down.sql  up.sql
migrations/2024-12-16-175309_update_group_id/: down.sql  up.sql
src/: lib.rs  main.rs  marcos.rs  schema.rs
src/handlers/: auth.rs  config.rs  db.rs  error.rs  logger.rs  mod.rs  redis.rs
src/models/: chat.rs  user.rs
src/routes/: api.rs  auth.rs  chat.rs  mod.rs  user.rs  user_routes.rs
src/utils/: api_response.rs
(+96 files in other folders)
