[package]
name = "openRD-web-server"
version = "0.1.0"
edition = "2021"


[dependencies]
bcrypt="0.16.0"
actix-web = "4.4"
actix-web-grants = "4.1.1"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = { version = "2.1", features = ["mysql"] }
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4"
jsonwebtoken = "9.3.0"
futures-util = "0.3.17"
futures = "0.3.17" 
chrono = { version = "0.4", features = ["serde"] }
config = "0.14.1"
uuid = { version = "1.4", features = ["v4"] }
derive_more = { version = "1.0.0", features = ["display", "error", "from"] }
cargo-make = "0.37.23"
# 新增依赖
fern = "0.7"